<resources>
    <string name="app_name">MineSweeper</string>
    <string name="string_name" />
    <string name="welcome_to_mineseeker">Welcome to MineSeeker!</string>
    <string name="by_kabir_and_sarbjot">By Kabir and Sarbjot</string>
    <string name="skip">Skip</string>
    <string name="help1">Help</string>
    <string name="the_objective_of_this_game_is_to_find_the_number_of_mines_each_box_n_in_the_table_will_consist_of_either_a_mine_or_a_number_that_tells_the_user_n_how_many_mines_are_in_ts_column_and_row_n_n_to_win_clear_out_all_of_the_mines">The objective of this game is to find the number of mines. Each box \n in the table will consist of either a mine, or a number that tells the user \n how many mines are in ts column and row. \n \n To win, clear out all of the mines</string>
    <string name="back">Back</string>
    <string name="about_the_authors">About the Authors</string>2
    <string name="kabir_and_sarbjot_are_third_year_students_studying_cs_at_sfu">Kabir and Sarbjot are third year students studying CS at SFU.</string>
    <string name="more_info_here">More info here</string>
    <string name="http_opencoursehub_cs_sfu_ca_jackt_grav_cms_cmpt276_home">http://opencoursehub.cs.sfu.ca/jackt/grav-cms/cmpt276/home</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play Game</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="board_size">Board Size</string>
    <string name="number_of_balloons">Number of Balloons</string>
    <string name="clear_play_time">Clear Play Time</string>
    <string name="welcome_to_balloon_finder">Welcome to Balloon Finder</string>
    <string name="all_stores_have_sold_out_of_balloons_your_objective_is_to_n_find_the_missing_ballons_click_on_a_button_in_the_table_n_to_see_a_balloon_or_a_number_that_tells_you_the_number_of_n_balloons_in_the_row_and_column">All stores have sold out of balloons! Your objective is to \n find the missing ballons. Click on a button in the table \n to see a balloon or a number that tells you the number of \n balloons in the row and column</string>
    <string name="balloon">Balloon</string>
    <string name="button_clicked">Button Clicked</string>
    <string name="save_settings">Save Settings</string>
    <string name="_4x6">4x6</string>
    <string name="_5x10">5x10</string>
    <string name="_6x15">6x15</string>
</resources>