<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/msgMainMeu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/main_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/play_game"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/options"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="242dp"
        android:layout_marginEnd="20dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/balloon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/balloon" />

</androidx.constraintlayout.widget.ConstraintLayout>