<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Settings">

    <TextView
        android:id="@+id/msgSettings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgBoardSize"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/board_size"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgSettings" />

    <TextView
        android:id="@+id/msgNumberofMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/number_of_balloons"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupBoard" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/clear_play_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginBottom="60dp"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/btnClear" />

    <RadioGroup
        android:id="@+id/radioGroupBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/msgBoardSize"
        app:layout_constraintTop_toTopOf="@+id/msgBoardSize" />

    <RadioGroup
        android:id="@+id/radioGroupMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/msgNumberofMines"
        app:layout_constraintTop_toTopOf="@+id/msgNumberofMines" />

</androidx.constraintlayout.widget.ConstraintLayout>